# graduates-guide-desktop

./: .gitignore  .gitmodules  HANDOFF.md  LICENSE  PRODUCT.md  README.md  index.html  package-lock.json  package.json  tsconfig.node.json  tsconfig.tsbuildinfo  vite.config.ts
.cursor/skills/parallel-iteration-audit/: SKILL.md
.github/workflows/: pages.yml  release.yml
docs/: BUILD-SPEC.md  engine-update.md  homebrew-cask.md  migrate-from-cli.md
fixtures/sanitized-vault/: cv.md
fixtures/sanitized-vault/config/: profile.yml
fixtures/sanitized-vault/data/: applications.md  daily-mission-2026-06-25.md
fixtures/sanitized-vault/interview-prep/: example-apply.md  example-interview.md
fixtures/sanitized-vault/modes/: _profile.md
landing/: index.html
scripts/: generate-hero-png.mjs  generate-social-card-og.mjs  link-engine.mjs  privacy-audit.mjs
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  engine.rs  lib.rs  main.rs  secrets.rs
src/components/: CopyToast.tsx  EthicalBanner.tsx  Layout.tsx  MissionCard.tsx  QueueRow.tsx  ScriptBlock.tsx  StatusBadge.tsx
src/lib/: onboarding-templates.ts  packRoutes.test.ts  packRoutes.ts  parts.test.ts  parts.ts  tauri.ts  types.ts  vault-write.ts
src/screens/: ApplyAssist.tsx  Evaluate.tsx  Followups.tsx  GeneratePack.tsx  Onboarding.tsx  Queue.tsx  ScriptReader.tsx  Settings.tsx  Today.tsx  VaultImport.tsx
src/styles/: global.css  tokens.css
